--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,36 @@
-.App {
-  text-align: center;
+#App {
+
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
+#App > header {
+  height: 45px;
+  background: #3db2e1;
+  margin: 10px 30px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#App > header ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
 }
 
-.App-link {
-  color: #61dafb;
+#App > header ul li {
+  display: inline-block;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#App > header ul li a {
+  display: inline-block;
+  height: 45px;
+  line-height: 45px;
+  text-decoration: none;
+  color: #fff;
+  padding: 0 20px;
+}
+
+#App > header ul li a:hover {
+  background-color: #95cbe0;
+}
+
+#content {
+  margin: 10px 30px;
 }
